syntax = "proto3";

option csharp_namespace = "gRpc.File.Service";

package FileServer;
import "google/protobuf/empty.proto";
message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;
    int32 readedByte = 3;
    FileInfo info = 4;
}
message FileInfo{
    string fileName = 1;
    string fileExtension = 2;
}
service FileStreamingService {
    rpc Download (FileInfo) returns (stream BytesContent);
    rpc Upload (stream BytesContent) returns(google.protobuf.Empty);
}
